Fix javascript status badge misalignment

--- a/src/less/components/badge.less
+++ b/src/less/components/badge.less
@@ -62,8 +62,8 @@
         color: @brand-secondary;
 
         .javascript-icon {
-            height: 1rem;
-            width: 1rem;
+            height: 1.25rem;
+            width: 1.25rem;
             display: inline-flex;
             background-size: contain;
             background-repeat: no-repeat;
